--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<link rel="stylesheet" type="text/css" href="source/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="/../peer/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta http-equiv="Content-Language" content="th">
 	<meta http-equiv="content-Type" content="text/html; charset=tis-620">
 	<meta http-equiv="Content-Type" content="text/html; charset=windows-874" />
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<div class="main floor">
+	<div class=" floor">
 		<div class="navbar-custom">
 			<a class="navbar-brand branny" herf="#">
 						Nittaya.
@@ -25,20 +25,39 @@
 				</ul>
 			</div>
 		</div>
-		<div class="row roewe">
-			<div class="col-lg-3 col-lg-offset-7">
-				<img class="peer-img" src="peer.png" alt="peer" />
+		<!--PAGE!-->
+		<div class="warp section__content">
+			<div class="row roewe">
+				<div class="col-lg-3 col-lg-offset-2">
+					<h1>"Peer Nittaya Road To kmutt"</h1>
+					<h1>"Love pat for ever "</h1>
+				</div>
+				<div class="col-lg-3 col-lg-offset-1">
+					<img class="peer-img" src="peer.png" alt="peer" />
+
+				</div>
+			</div>
+			<div class="row">
+
 			</div>
 		</div>
-	</div>
+		<!--END OF PAGE!-->
+		<!--PAGE2-->
+		<div class="warp section__content">
+			<div class="row">
+				<div class="col-lg-3 col-lg-offset-1">
+					<h1>Peer Nittaya</h1>
+				</div>
 
-	<div class="row walee">
-		<div class="col-lg-3 col-lg-offset-2">
-			<h1>"Peer Nittaya Road To kmutt"</h1>
-			<h1>"Love pat for ever ก"</h1>
+			</div>
+			<div class="row">
+				<div class="col-lg-2 col-lg-offset-2">
+					<h2>Sarasas Witaed Suksa</h2>
+				</div>
+			</div>
 		</div>
+		<!--END OF PAGE2-->
 	</div>
-
 </body>
 
 </html>
